# fastvec-rs

./: .gitignore  Cargo.toml  README.md  README_ZH.md
.github/workflows/: check.yml
benches/: README.md  basic.rs  report.html
benchmark/: .gitignore  Cargo.toml  README.md
benchmark/benches/: main.rs
benchmark/reports/index_large/fastvec/base/: estimates.json  sample.json
benchmark/reports/index_large/fastvec/new/: benchmark.json  tukey.json
benchmark/reports/index_large/fastvec/report/: index.html
benchmark/reports/index_large/fastvec__smallvec/base/: tukey.json
benchmark/reports/index_large/fastvec__smallvec/new/: benchmark.json  estimates.json  sample.json
benchmark/reports/index_large/fastvec__smallvec/report/: index.html
benchmark/reports/index_large/fastvecdata/base/: estimates.json  tukey.json
benchmark/reports/index_large/fastvecdata/new/: benchmark.json  sample.json
benchmark/reports/index_large/fastvecdata/report/: index.html
benchmark/reports/index_large/report/: index.html
benchmark/reports/index_large/smallvec__smallvec/base/: benchmark.json  estimates.json  sample.json
benchmark/reports/index_large/smallvec__smallvec/new/: tukey.json
benchmark/reports/index_large/smallvec__smallvec/report/: index.html
benchmark/reports/index_large/vec/base/: benchmark.json  estimates.json  sample.json
benchmark/reports/index_large/vec/new/: tukey.json
benchmark/reports/index_large/vec/report/: index.html
benchmark/reports/index_small/arrayvec/base/: estimates.json  sample.json
benchmark/reports/index_small/arrayvec/new/: benchmark.json  tukey.json
benchmark/reports/index_small/arrayvec/report/: index.html
benchmark/reports/index_small/fastvec/base/: estimates.json  sample.json  tukey.json
benchmark/reports/index_small/fastvec/new/: benchmark.json
benchmark/reports/index_small/report/: index.html
benchmark/reports/new_small/report/: index.html
benchmark/reports/pop_small/report/: index.html
benchmark/reports/push_small/report/: index.html
benchmark/reports/push_small_from_empty/report/: index.html
benchmark/reports/report/: index.html
benchmark/src/: lib.rs
src/: array.rs  auto_vec.rs  fast.rs  fast_vec.rs  fast_vec_data.rs  lib.rs  serde.rs  small.rs  stack_vec.rs  std_io.rs  utils.rs
(+141 files in other folders)
