[package]
name = "fastvec"
version = "1.0.0"
edition = "2024"
keywords = ["small", "vec", "stack", "no_std", "fastvec"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/fastvec"
repository = "https://github.com/Mysvac/fastvec-rs"
description = "A vector crate that stores small data on the stack and automatically spills to the heap when needed."
rust-version = "1.90.0"
exclude = ["benchmark", ".github"]

[features]

std = []

nightly = []

serde = [
    "dep:serde_core"
]

[dependencies]

serde_core = { version = "1", optional = true, default-features = false }

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true


