[package]
name = "fastvec"
version = "2.0.0"
edition = "2024"
keywords = ["SBO", "Vec", "SmallVec", "ArrayVec", "FastVec", "no_std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/fastvec"
repository = "https://github.com/Mysvac/fastvec-rs"
description = "A high-performance SBO vector crate."
rust-version = "1.93.0"
exclude = ["benchmark", ".github", "README_ZH.md"]

[features]

default = [
    "fastvec",
    "arrayvec",
    "smallvec",
]

fastvec = []
arrayvec = []
smallvec = []

std = []

serde = [
    "dep:serde_core"
]

[dependencies]

serde_core = { version = "1", optional = true, default-features = false }

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true


